Fix spacing

--- a/docs/_static/conf/scss/main-2025.scss
+++ b/docs/_static/conf/scss/main-2025.scss
@@ -45,7 +45,7 @@ body h1 {
 
 body .page-content ul {
     list-style: none;
-    padding: 0 0 20px 0;
+    // padding: 0 0 20px 0;
     margin: 0;
 
     li {
